--- a/css/student_style.css
+++ b/css/student_style.css
@@ -34,3 +34,23 @@
 }
 
 /* Place your styles below this line */
+
+#testing {
+  background-image: url('https://static-cdn.jtvnw.net/emoticons/v1/29159/3.0');
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: center;
+  font-size: 30px;
+  color: #fff;
+  font-family: 'Arial Black', Gadget, sans-serif;
+  text-shadow: 1px 1px #000;
+  transition: .2s;
+}
+#testing:hover {
+  background-image: url('http://i.imgur.com/atvsq3f.jpg?fb');
+  color: #ff00f7;
+  text-shadow: 2px 2px #fff;
+  outline: 10px solid orange;
+  box-shadow: 18px 18px 10px #000;
+  animation: bounce .6s infinite ease;
+}
